# svbony-ai-assistant

./: .gitignore  Cargo.toml  LICENSE  README-CN.MD  README-CN.md  README-DE.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-PT.md  README-RU.md  README.md
.github/workflows/: build.yml
src/: actions.rs  autostart.rs  background.rs  cli.rs  config.rs  hid_monitor.rs  main.rs
